--- a/package.json
+++ b/package.json
@@ -11,10 +11,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@fontsource/poppins": "^5.0.8",
+    "@types/react-scroll": "^1.8.10",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.1"
+    "react-parallax-tilt": "^1.7.175",
+    "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.1.1",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@it-incubator/eslint-config": "^1.0.1",
