--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
     "@fontsource/poppins": "^5.0.8",
     "@types/react-scroll": "^1.8.10",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-parallax-tilt": "^1.7.175",
     "react-scroll": "^1.9.0",
     "react-tsparticles": "^2.12.2",
