--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@fontsource/poppins": "^5.0.8",
     "@types/react-scroll": "^1.8.10",
+    "i18next": "^23.7.6",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
@@ -41,6 +42,9 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-http-backend": "^2.4.2",
+    "react-i18next": "^13.5.0",
     "stylelint": "^15.11.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
