--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.1",
+    "@fontsource/manrope": "^5.0.17",
     "@fontsource/poppins": "^5.0.8",
     "@types/react-scroll": "^1.8.10",
     "i18next": "^23.7.6",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.48.2",
     "react-parallax-tilt": "^1.7.175",
     "react-scroll": "^1.9.0",
+    "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.12.2",
     "styled-components": "^6.1.1",
     "tsparticles": "^2.12.0",
